Corrected day section too narrow

--- a/src/app/hourly-detail-display/hourly-detail-display.component.scss
+++ b/src/app/hourly-detail-display/hourly-detail-display.component.scss
@@ -24,7 +24,7 @@
     display: block;
     font-size: x-large;
     align-self: center;
-    min-width: 100px;
+    min-width: 10%;
   }
 
   .scroll {
